[gd_scene load_steps=2 format=3 uid="uid://cm7lgtx12fno"]

[ext_resource type="Script" path="res://Main.gd" id="1"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 1.50513
offset_top = 548.745
offset_right = 668.505
offset_bottom = 600.745
placeholder_text = "Path3D to file"

[node name="Button" type="Button" parent="."]
offset_left = 905.901
offset_top = 549.723
offset_right = 1021.9
offset_bottom = 599.723
text = "Convert"

[node name="PopUP" type="Button" parent="."]
offset_left = 669.0
offset_top = 550.0
offset_right = 724.0
offset_bottom = 600.0
text = "***"

[node name="Label" type="Label" parent="."]
offset_left = 3.17848
offset_top = 532.979
offset_right = 838.178
offset_bottom = 546.979
text = "Enter file path below"

[node name="FileDialog" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.tsv")

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PopUP" to="." method="_on_PopUP_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
